Dev (#18)
* Added reports, fixed a bug

* Added reports button

* Added discount and price to reports

* Fixed math problem in reports controller

* Fixed MANUFACTURER filtering on the reports page

* Modified device imports and correct some issues

* Added a report api
